make release artifact naming os-qualified
- fix release artifact naming
- fix build macos arm64
- deactivate test not running with latest macos-14